improve readability by increasing font weight

--- a/web/css/tarot.css
+++ b/web/css/tarot.css
@@ -1,3 +1,7 @@
+body {
+    font-weight: 700;
+}
+
 div.container {
     max-width: 1100px;
 }
@@ -20,7 +24,7 @@ div.footer {
 
 h1 {
     font-size:250%;
-    font-weight: 400;
+    font-weight: 900;
     padding-bottom: 0.5ex;
     letter-spacing: -0.1ex;
 }
