--- a/web/css/tarot.css
+++ b/web/css/tarot.css
@@ -19,7 +19,7 @@ div.header img {
 div.footer {
     margin-top: 3em;
     font-size: 90%;
-    line-height: 90%;
+    line-height: 95%;
 }
 
 h1 {
@@ -71,7 +71,7 @@ tr.ok td {
     background-color: #fdfdfd;
     font-size: 180%;
     font-weight: bolder;
-    border: solid black 0.1ex;
+    border: solid #1f1f1f 0.12ex;
     border-radius: 1ex;
     margin-bottom: 1ex;
 }
@@ -79,10 +79,9 @@ tr.ok td {
 #progress_bar {
     display: inline-block;
     height: 100%;
-    width:99%;
-    padding-right: 0.5ex;
+    width: 100%;
     background-color: #bcbcfd;
-    border-radius: 1ex;
+    border-radius: 0.85ex;
     text-align: right;
 }
 
